update link social

--- a/main.css
+++ b/main.css
@@ -395,6 +395,9 @@ body{
     color:#fff;
     font-size: 18px;
 }
+.item h1{
+    font-size: 18px;
+}
 .item img{
     width: 160px;
     height: 200px;
